# mpv-web-catalog

./: README.md  config.env  config.env.example  mpv-web-catalog-mine.service  pyproject.toml
src/mpv_web_catalog/: cli.py  metadata.py  web.py  wsgi.py
src/mpv_web_catalog/templates/: index.html
