[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mpv-web-catalog"
version = "0.0.1"
dependencies = [
    "Flask",
    "Levenshtein",
    "aiohttp",
    "gunicorn",
    "mpvremote",
    "opencv-python",
    "python-dotenv",
    "requests",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project.scripts]
mpv-web-catalog = "mpv_web_catalog.cli:main"
